gotwebd: fix briefs/tags navigation overlap
Introduces a separate field for the "next" button (now called "More")
and adjusted the CSS/HTML so it's used. Finally, drops the old code used
to handle the pagination for the BRIEFS/COMMITS cases.

Needs a small hack for the time being, setting the action to TAGS.  This
is due how qs->action is changed in gotweb.c while handling the request.

ok jamsek

--- a/gotwebd/files/htdocs/gotwebd/gotweb.css
+++ b/gotwebd/files/htdocs/gotwebd/gotweb.css
@@ -117,6 +117,10 @@ body {
 	background-color: #f5fcfb;
 	overflow: hidden;
 }
+#nav_more {
+	padding: 5px 0;
+	text-align: center;
+}
 #nav_prev {
 	float: left;
 	padding-left: 10px;
